--- a/ProtoEngine.vcxproj
+++ b/ProtoEngine.vcxproj
@@ -52,7 +52,10 @@
     <ClInclude Include="objects\rollaball\rollaball.h" />
     <ClInclude Include="objects\satellite\satellite.h" />
     <ClInclude Include="objects\spacecraft\spacecraft.h" />
+    <ClInclude Include="scenes\demoquat.h" />
     <ClInclude Include="scenes\gravaball.h" />
+    <ClInclude Include="scenes\pong.h" />
+    <ClInclude Include="scenes\wrecksite.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="engine\asset.cpp" />
@@ -83,7 +86,10 @@
     <ClCompile Include="objects\satellite\satellite.cpp" />
     <ClCompile Include="objects\spacecraft\spacecraft.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="scenes\demoquat.cpp" />
     <ClCompile Include="scenes\gravaball.cpp" />
+    <ClCompile Include="scenes\pong.cpp" />
+    <ClCompile Include="scenes\wrecksite.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{79258F7C-6F0F-43A0-8590-8392AAB3852E}</ProjectGuid>
