Added shoal and shark to Wrecksite. Edited camera, transform and shaders to support sprint, setright (broken) and fog.

--- a/ProtoEngine.vcxproj.filters
+++ b/ProtoEngine.vcxproj.filters
@@ -152,6 +152,12 @@
     <ClInclude Include="scenes\frenzy.h">
       <Filter>Header Files\Scenes</Filter>
     </ClInclude>
+    <ClInclude Include="objects\shark\shark.h">
+      <Filter>Header Files\Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="objects\shoal\shoal.h">
+      <Filter>Header Files\Objects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="engine\camera.cpp">
@@ -258,6 +264,12 @@
     </ClCompile>
     <ClCompile Include="scenes\frenzy.cpp">
       <Filter>Source Files\Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="objects\shark\shark.cpp">
+      <Filter>Source Files\Objects</Filter>
+    </ClCompile>
+    <ClCompile Include="objects\shoal\shoal.cpp">
+      <Filter>Source Files\Objects</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
