--- a/ProtoEngine.vcxproj
+++ b/ProtoEngine.vcxproj
@@ -51,6 +51,8 @@
     <ClInclude Include="objects\playercraft\playercraft.h" />
     <ClInclude Include="objects\rollaball\rollaball.h" />
     <ClInclude Include="objects\satellite\satellite.h" />
+    <ClInclude Include="objects\shark\shark.h" />
+    <ClInclude Include="objects\shoal\shoal.h" />
     <ClInclude Include="objects\spacecraft\spacecraft.h" />
     <ClInclude Include="scenes\atoms.h" />
     <ClInclude Include="scenes\demoquat.h" />
@@ -87,6 +89,8 @@
     <ClCompile Include="objects\playercraft\playercraft.cpp" />
     <ClCompile Include="objects\rollaball\rollaball.cpp" />
     <ClCompile Include="objects\satellite\satellite.cpp" />
+    <ClCompile Include="objects\shark\shark.cpp" />
+    <ClCompile Include="objects\shoal\shoal.cpp" />
     <ClCompile Include="objects\spacecraft\spacecraft.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="scenes\atoms.cpp" />
